Changed http to https for placehold

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <h1>Test</h1>
 
     <picture>
-      <source srcset="http://placehold.it/360x640" media="(max-width: 400px)" />
-      <source srcset="http://placehold.it/414x736" media="(max-width: 700px)" />
-      <source srcset="http://placehold.it/1024x1366" media="(max-width: 1200px)" />
-      <img src="http://placehold.it/150x150/117fe8/fff" alt="" />
+      <source srcset="https://placehold.it/360x640" media="(max-width: 400px)" />
+      <source srcset="https://placehold.it/414x736" media="(max-width: 700px)" />
+      <source srcset="https://placehold.it/1024x1366" media="(max-width: 1200px)" />
+      <img src="https://placehold.it/150x150/117fe8/fff" alt="" />
     </picture>
     
   </body>
