Adds viewport for correct sizing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Lazy Image</title>
+    <meta name="viewport" content="width=device-width">
     <script src="./lazysizes.min.js"></script>
   </head>
   <body>
