--- a/test01.html
+++ b/test01.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <img
-        data-src="http://placehold.it/{width}"
+        data-src="https://placehold.it/{width}"
         data-sizes="auto"
         class="resp-img lazyload"
         alt="" />
